# hibiscus0.9

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  EAZR_04_PA_Flutter_Integration.md  EAZR_FLUTTER_UI_RENDERING_GUIDE.md  FLUTTER_INTEGRATION_GUIDE.md  HIBISCUS_ABSORB_POLICY_ANALYZER.md  HIBISCUS_AUDIT_REPORT.md  HIBISCUS_BUILD_BLUEPRINT_v5_SERIES_A.md  HIBISCUS_KNOWLEDGE_ENRICHMENT.md  HIBISCUS_STEP0_API_DISCOVERY_PROMPT.md  README.md  docker-compose.override.yml  docker-compose.yml  response.md  upload_test.sh
docs/: PLAN.md  (+14 more)
hibiscus/: .env.example  Dockerfile  Makefile  __init__.py  config.py  docker-compose.hibiscus.yml  main.py  pyproject.toml
hibiscus/Seed/: 02_life_insurance.sql
hibiscus/agents/: __init__.py  base.py  calculator.py  claims_guide.py  educator.py  grievance_navigator.py  policy_analyzer.py  portfolio_optimizer.py  recommender.py  regulation_engine.py  researcher.py  risk_detector.py  surrender_calculator.py  tax_advisor.py
hibiscus/api/: __init__.py  analyze.py  chat.py  health.py  portfolio.py  router.py  websocket.py
hibiscus/api/middleware/: __init__.py  auth.py  cors.py  rate_limit.py  request_id.py
hibiscus/api/schemas/: __init__.py  analysis.py  chat.py  common.py
hibiscus/api/static/: health-dashboard.html  landing.html  swagger-custom.css
hibiscus/docs/: api_guide.md  architecture.md  self_hosted_evaluation.md
hibiscus/evaluation/: __init__.py  bench.py  evaluator.py  metrics.py
hibiscus/extraction/: __init__.py  classifier.py  gap_analysis.py  processor.py  scoring.py  validation.py
hibiscus/extraction/extractors/: __init__.py  base.py  health.py  life.py  motor.py  pa.py  travel.py
hibiscus/extraction/prompts/: health.txt  life.txt  motor.txt  pa.txt  travel.txt
hibiscus/extraction/schemas/: __init__.py  common.py  health.py  life.py  motor.py  pa.py  travel.py
hibiscus/guardrails/: __init__.py  compliance.py  emotional.py  financial.py  hallucination.py  pii.py
hibiscus/integrations/: __init__.py  base.py  hdfc_ergo.py  icici_lombard.py  registry.py  star_health.py
hibiscus/knowledge/: __init__.py  escalation_paths.py
hibiscus/knowledge/data/: insurer_name_map.json
hibiscus/knowledge/formulas/: __init__.py  compound_growth.py  depreciation.py  eazr_score.py  emi.py  inflation.py  irr.py  opportunity_cost.py  premium_adequacy.py  surrender_value.py  tax_benefit.py
hibiscus/knowledge/graph/: __init__.py  __main__.py  client.py  schema.py
hibiscus/knowledge/rag/: __init__.py  client.py  embeddings.py  ingestion.py
hibiscus/llm/: __init__.py  model_selector.py  router.py
hibiscus/llm/prompts/: __init__.py
hibiscus/memory/: __init__.py  assembler.py  db.py
hibiscus/memory/extraction/: __init__.py  memory_extractor.py
hibiscus/memory/layers/: __init__.py  conversation.py  document.py  knowledge.py  outcome.py  portfolio.py  profile.py  response_cache.py  session.py
hibiscus/observability/: __init__.py  cost_tracker.py  langsmith.py  logger.py  metrics.py
hibiscus/orchestrator/: __init__.py  graph.py  state.py
hibiscus/orchestrator/nodes/: __init__.py  agent_dispatch.py  context_assembly.py  direct_llm.py  execution_planning.py  guardrail_check.py  intent_classification.py  memory_storage.py  response_aggregation.py
hibiscus/orchestrator/routing/: __init__.py  complexity_router.py  emotional_router.py  model_router.py
hibiscus/scripts/: ingest_irdai_registry.py
hibiscus/services/: __init__.py  fraud_alert.py  kg_enrichment.py  kg_enrichment_validator.py  outcome_analyzer.py  outcome_collector.py  renewal_tracker.py
hibiscus/tests/: __init__.py
hibiscus/tests/e2e/: __init__.py  test_claims_assistance.py  test_policy_upload.py  test_surrender_inquiry.py
hibiscus/tests/integration/: __init__.py  test_agent_pipeline.py  (+4 more)
hibiscus/tools/: __init__.py  registry.py
hibiscus/utils/: __init__.py  cache_warmup.py  language_detect.py
(+478 files in other folders)
